--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,9 @@ services:
       POSTGRES_PASSWORD: ${SQL_PASSWORD}
       POSTGRES_USER: ${SQL_USER}
       POSTGRES_DB: ${SQL_DB}
-#  web:s
+  web:
+    build: .
+    ports:
+      - 5000:5000
+    depends_on:
+      - db
